# daijob_crawler

./: pyproject.toml
daijob_crawler/: daijob_crawler.py
daijob_crawler/parser/: parse_company_detail.py  parse_recruit_detail.py  parse_recruit_list.py
daijob_crawler/schema/: company.py  recruit.py
examples/: config.toml
