[project]
name = "daijob-crawler"
version = "0.1.0"
description = ""
authors = [
    { name = "hai-pham-theinfitech", email = "hai_phamn@theinfitech.com" }
]
requires-python = "~=3.9.13"

dependencies = []

[project.optional-dependencies]
dev = [
    "salesnext-crawler @ git+ssh://git@github.com/SalesNext/salesnext-crawler.git@event",
    "ipykernel>=6.29.5,<7.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
